update ppp and dg

--- a/docs/team/onearmyj.adoc
+++ b/docs/team/onearmyj.adoc
@@ -91,5 +91,6 @@ include::../UserGuide.adoc[tag=undoredocommand]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
+include::../DeveloperGuide.adoc[tag=storageuml]
 include::../DeveloperGuide.adoc[tag=undoredo]
 
